--- a/.gitconfig
+++ b/.gitconfig
@@ -23,6 +23,7 @@
   co = checkout
   # Alternate log display from Scott Chacon
   lol = log --pretty=oneline --abbrev-commit --graph --decorate
+  plog = log --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit
   unstage = reset HEAD
   staged = diff --cached
   unstaged = diff
