Ignore everything but selected files

--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,4 @@
 .Trash/
-.config/
-.cups/
-.darkplaces/
-.dropbox/
-.eyrc
-.gem/
-.last.fm-cache/
-.lesshst
-.npm/
-.passenger/
-.pow
-.rbx/
-.rvm/
-.ssh/
-.subversion/
-.vim/backup/
-.vim/.netrwhist
-.viminfo
-.zcompdump
-.*history*
 Applications*
 Desktop/
 Documents/
@@ -32,13 +12,30 @@ Pictures/
 Projects/
 Public/
 Sites/
-
-/.cocoapods/
-
-/.netrc
-
-/.vagrant.d/
-
-*.pyc
-.idea/
 .vim/bundle
+*
+!.vim/bundle/Vundle.vim
+!.zshrc
+!.zlogin
+!.vimrc
+!.tmux.conf
+!.railsrc
+!.psqlrc
+!.profile
+!.powconfig
+!.irbrc
+!.ideavimrc
+!.gvimrc
+!.gitmodules
+!.gitignore_global
+!.gitignore
+!.githelpers
+!.gitcofig
+!.gitattributes
+!.gemrc
+!.ctags
+!.bashrc
+!.bash_profile
+!.ackrc
+!.zsh
+!.vim
