--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,11 +1,61 @@
-# act like vim
-setw -g mode-keys vi
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
-bind-key -r C-h select-window -t :-
-bind-key -r C-l select-window -t :+
-
-# look good
 set -g default-terminal "screen-256color"
+set -g prefix C-a
+set -g history-limit 5000
+# Use vim keybindings in copy mode
+setw -g mode-keys vi
+
+# Setup 'v' to begin selection as in Vim
+bind-key -t vi-copy v begin-selection
+bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+
+# Update default binding of `Enter` to also use copy-pipe
+unbind -t vi-copy Enter
+bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+
+bind -n C-k run 'tmux-vim-select-pane -U'
+bind -n C-j run 'tmux-vim-select-pane -D'
+bind -n C-h run 'tmux-vim-select-pane -L'
+bind -n C-l run 'tmux-vim-select-pane -R'
+
+bind C-a last-window
+
+bind c new-window -c "#{pane_current_path}"
+bind v split-window -h -c "#{pane_current_path}"
+bind s split-window -v -c "#{pane_current_path}"
+bind p choose-session
+
+bind : command-prompt
+
+bind \ copy-mode
+bind -t vi-copy v begin-selection
+bind -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+
+bind r source-file ~/.tmux.conf \; display "Reloaded ~/.tmux.conf"
+
+set -g base-index 1
+set -s escape-time 0
+setw -g pane-base-index 1
+setw -g automatic-rename on
+
+set -g status-left ""
+set -g status-right "#[fg=colour221]#S"
+set -g status-right-length 60
+set -g status-right "#[fg=green]%l:%M %p : #[fg=blue]#S"
+set -g window-status-separator '  '
+set -g window-status-format "#[fg=colour240]#I:#W"
+set -g window-status-current-format "#[fg=colour221]#I:#W"
+
+set -g status-fg white
+set -g status-bg colour234
+set -g message-fg colour208
+set -g message-bg colour236
+set -g pane-border-fg colour234
+set -g pane-active-border-fg colour234
+
+bind C-l send-keys 'C-l'
+set -g mode-mouse on
+set -g mouse-resize-pane on
+set -g mouse-select-pane on
+set -g mouse-select-window on
+
+set-option -g display-time 4000
