--- a/.tmux.conf
+++ b/.tmux.conf
@@ -52,10 +52,11 @@ set -g message-bg colour236
 set -g pane-border-fg colour234
 set -g pane-active-border-fg colour234
 
-bind C-l send-keys 'C-l'
 set -g mode-mouse on
 set -g mouse-resize-pane on
 set -g mouse-select-pane on
 set -g mouse-select-window on
 
 set-option -g display-time 4000
+
+bind k send-keys 'C-l' \; run-shell "sleep .4s" \; clear-history
