Sort ignored files

--- a/.gitignore
+++ b/.gitignore
@@ -12,32 +12,32 @@ Pictures/
 Projects/
 Public/
 Sites/
-.vim/bundle
+.vim/plugged
 *
-!.vim/bundle/Vundle.vim
-!.zshrc
-!.zlogin
-!.vimrc
-!.tmux.conf
-!.railsrc
-!.psqlrc
-!.profile
-!.powconfig
-!.irbrc
-!.ideavimrc
-!.gvimrc
-!.gitmodules
-!.gitignore_global
-!.gitignore
-!.githelpers
-!.gitcofig
-!.gitattributes
-!.gemrc
-!.ctags
-!.bashrc
-!.bash_profile
 !.ackrc
-!.zsh
-!.vim
 !.agignore
+!.bash_profile
+!.bashrc
+!.ctags
+!.gemrc
+!.gitattributes
+!.gitcofig
+!.githelpers
+!.gitignore
+!.gitignore_global
+!.gitmodules
+!.gvimrc
+!.ideavimrc
+!.irbrc
+!.powconfig
+!.profile
+!.psqlrc
+!.railsrc
+!.tmux.conf
+!.vim
+!.vim/bundle/Vundle.vim
+!.vimrc
+!.zlogin
+!.zsh
 !.zshenv
+!.zshrc
