--- a/.tmux.conf
+++ b/.tmux.conf
@@ -54,10 +54,7 @@ set -g message-bg colour236
 set -g pane-border-fg colour234
 set -g pane-active-border-fg colour234
 
-set -g mode-mouse on
-set -g mouse-resize-pane on
-set -g mouse-select-pane on
-set -g mouse-select-window on
+set -g mouse on
 
 set-option -g display-time 4000
 
