--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,12 +7,12 @@ set -g history-limit 5000
 setw -g mode-keys vi
 
 # Setup 'v' to begin selection as in Vim
-bind-key -t vi-copy v begin-selection
-bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+# bind-key -t vi-copy v begin-selection
+# bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 
 # Update default binding of `Enter` to also use copy-pipe
-unbind -t vi-copy Enter
-bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+# unbind -t vi-copy Enter
+# bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 
 # Bind ']' to use pbpaste
 bind ] run "reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux paste-buffer"
@@ -34,8 +34,8 @@ bind p choose-session
 bind : command-prompt
 
 bind \ copy-mode
-bind -t vi-copy v begin-selection
-bind -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+# bind -t vi-copy v begin-selection
+# bind -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 
 bind r source-file ~/.tmux.conf \; display "Reloaded ~/.tmux.conf"
 
