--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,5 @@ Sites/
 !.zshenv
 !.zshrc
 !.setup.sh
+!Library/Application Support/Code/User/settings.json
+!Library/Application Support/Code/User/keybindings.json
