Simplify git log formats

--- a/.gitconfig
+++ b/.gitconfig
@@ -22,8 +22,8 @@
 [alias]
   co = checkout
   # Alternate log display from Scott Chacon
-  lol = log --pretty=oneline --abbrev-commit --graph --decorate
-  plog = log --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit
+  lol = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit
+  l = log --pretty=format:'%Cred%h%Creset %Cgreen%cr %C(bold blue)%an%Creset%C(yellow)%d%Creset %s'
   unstage = reset HEAD
   staged = diff --cached
   unstaged = diff
@@ -37,7 +37,6 @@
   aa = add --all
   r = !git l -20
   ra = !git r --all
-  l = "!source ~/.githelpers && pretty_git_log"
   fa = fetch --all
   pullff = pull --ff-only
   ff = merge --ff-only
