--- a/.tmux.conf
+++ b/.tmux.conf
@@ -56,8 +56,8 @@ set -g status-fg white
 set -g status-bg colour234
 set -g message-fg colour208
 set -g message-bg colour236
-set -g pane-border-fg colour234
-set -g pane-active-border-fg colour234
+# set -g pane-border-fg colour234
+# set -g pane-active-border-fg colour234
 
 set -g mouse on
 
