Use native --revase --autostash instead of git-up gem

--- a/.gitconfig
+++ b/.gitconfig
@@ -40,6 +40,7 @@
   fa = fetch --all
   pullff = pull --ff-only
   ff = merge --ff-only
+	up = pull --rebase --autostash
 [merge]
   tool = vimdiff
 [core]
