--- a/.gitignore
+++ b/.gitignore
@@ -44,5 +44,6 @@ Sites/
 !.zshenv
 !.zshrc
 !.setup.sh
+!.config/fish/*
 !Library/Application Support/Code/User/settings.json
 !Library/Application Support/Code/User/keybindings.json
