--- a/.gitignore
+++ b/.gitignore
@@ -45,5 +45,6 @@ Sites/
 !.zshrc
 !.setup.sh
 !.config/fish/*
+!.config/bash/*
 !Library/Application Support/Code/User/settings.json
 !Library/Application Support/Code/User/keybindings.json
