Update tmux config for new version compatibility

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -54,8 +54,8 @@ set -g window-status-current-format "#[fg=colour221]#I:#W"
 
 set -g status-fg white
 set -g status-bg colour234
-set -g message-fg colour208
-set -g message-bg colour236
+# set -g message-fg colour208
+# set -g message-bg colour236
 # set -g pane-border-fg colour234
 # set -g pane-active-border-fg colour234
 
