Track ripgrep config

--- a/.gitignore
+++ b/.gitignore
@@ -46,5 +46,6 @@ Sites/
 !.setup.sh
 !.config/fish/*
 !.config/bash/*
+!.ripgreprc
 !Library/Application Support/Code/User/settings.json
 !Library/Application Support/Code/User/keybindings.json
