--- a/.gitconfig
+++ b/.gitconfig
@@ -52,3 +52,8 @@
   program = /usr/local/MacGPG2/bin/gpg
 [fetch]
   prune = true
+[filter "lfs"]
+  required = true
+  clean = git-lfs clean -- %f
+  smudge = git-lfs smudge -- %f
+  process = git-lfs filter-process
