Configure bundler to use 4 threads

--- a/.gitignore
+++ b/.gitignore
@@ -47,5 +47,6 @@ Sites/
 !.config/fish/*
 !.config/bash/*
 !.ripgreprc
+!.bundle/config
 !Library/Application Support/Code/User/settings.json
 !Library/Application Support/Code/User/keybindings.json
