Add ranger config

--- a/.gitignore
+++ b/.gitignore
@@ -48,5 +48,6 @@ Sites/
 !.config/bash/*
 !.ripgreprc
 !.bundle/config
+!.config/ranger/*
 !Library/Application Support/Code/User/settings.json
 !Library/Application Support/Code/User/keybindings.json
