--- a/.gitignore
+++ b/.gitignore
@@ -48,6 +48,7 @@ Sites/
 !.config/bash/*
 !.ripgreprc
 !.bundle/config
+!.config/jesseduffield/lazygit/config.yml
 !.config/ranger/*
 !Library/Application Support/Code/User/settings.json
 !Library/Application Support/Code/User/keybindings.json
