--- a/.gitignore
+++ b/.gitignore
@@ -49,6 +49,7 @@ Sites/
 !.ripgreprc
 !.bundle/config
 !.config/jesseduffield/lazygit/config.yml
+!.config/bat/config
 !.config/ranger/*
 !Library/Application Support/Code/User/settings.json
 !Library/Application Support/Code/User/keybindings.json
