Show relative line numbers in JetBrains IDEs

--- a/.ideavimrc
+++ b/.ideavimrc
@@ -43,3 +43,6 @@ nnoremap <CR> :nohlsearch<cr>
 " double percentage sign in command mode is expanded
 " to directory of current file - http://vimcasts.org/e/14
 cnoremap %% <C-R>=expand('%:h').'/'<cr>
+
+:set rnu
+:set nu
