Change macOS titlebar color

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -880,7 +880,7 @@ inactive_tab_background #224
 
 #: OS specific tweaks {{{
 
-# macos_titlebar_color system
+macos_titlebar_color #0c0c0d
 
 #: Change the color of the kitty window's titlebar on macOS. A value
 #: of system means to use the default system color, a value of
