Use a modified GitHub Dark color theme

--- a/.config/kitty/theme.conf
+++ b/.config/kitty/theme.conf
@@ -1,23 +1,46 @@
-color0 #494444
-color1 #f65742
-color10 #b8f48b
-color11 #f5f39d
-color12 #90caf9
-color13 #f477f3
-color14 #9fa2f9
-color15 #fcfcfc
-color2 #3bdc46
-color3 #d1cd3c
-color4 #118cf5
-color5 #ee5bec
-color6 #6f71ee
-color7 #f5f5f5
-color8 #838080
-color9 #d08f87
-background #0d0c0d
-cursor #ffb472
-cursor_text_color #feffff
-foreground #d7d7d7
-url_color #3482d5
-selection_foreground #cccccc
-selection_background #383f7c
+# github colors for Kitty
+
+background #0c0c0d
+foreground #d3d2d1
+selection_background #163356
+selection_foreground #b3b1ad
+url_color #b3b1ad
+cursor #73b7f2
+
+# Tabs
+# active_tab_background #58a6ff
+# active_tab_foreground #090c10
+# inactive_tab_background #73716d
+# inactive_tab_foreground #090c10
+
+active_tab_background   #55a
+inactive_tab_foreground #999
+inactive_tab_background #224
+
+# Windows Border
+active_border_color #b3b1ad
+inactive_border_color #b3b1ad
+
+# normal
+color0 #484f58
+color1 #ff7b72
+color2 #3fd950
+color3 #d29952
+color4 #58a6ff
+color5 #bc8cff
+color6 #39c5cf
+color7 #7d8596
+
+# bright
+color8 #8d95a6
+color9 #ffa198
+color10 #56d364
+color11 #e3b341
+color12 #79c0ff
+color13 #d2a8ff
+color14 #56d4dd
+color15 #b3b1ad
+
+# extended colors
+color16 #e3b341
+color17 #ffa198
