--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -189,7 +189,7 @@ adjust_column_width 107%
 
 #: Scrollback {{{
 
-# scrollback_lines 2000
+scrollback_lines 20000
 
 #: Number of lines of history to keep in memory for scrolling back.
 #: Memory is allocated on demand. Negative numbers are (effectively)
@@ -199,6 +199,7 @@ adjust_column_width 107%
 #: scrollback_pager_history_size.
 
 # scrollback_pager less --chop-long-lines --RAW-CONTROL-CHARS +INPUT_LINE_NUMBER
+scrollback_pager nvim -u NONE -c "set laststatus=0 clipboard=unnamedplus" -c "autocmd TermOpen * normal G" -c "map q :qa!<CR>" -c "silent write! /tmp/kitty_scrollback_buffer | te echo -n \"$(sed -e 's/\\^[]8;;file:[^\\\\]*\\\\//g' /tmp/kitty_scrollback_buffer)\"; rm -f /tmp/kitty_scrollback_buffer; sleep 1000"
 
 #: Program with which to view scrollback in a new window. The
 #: scrollback buffer is passed as STDIN to this program. If you change
