--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -865,7 +865,7 @@ inactive_tab_background #224
 #: with the mouse. The special value of ``ask`` means that kitty will
 #: ask before opening the link.
 
-# term xterm-kitty
+term xterm-256color
 
 #: The value of the TERM environment variable to set. Changing this
 #: can break many terminal programs, only change it if you know what
