--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -284,6 +284,7 @@ scrollback_pager nvim -u NONE -c "set laststatus=0 clipboard=unnamedplus" -c "au
 #: instead. Map a shortcut with the paste_from_buffer action to paste
 #: from this private buffer. For example::
 
+map cmd+k combine : clear_terminal scrollback active : send_text normal \x0c
 #:     map cmd+shift+v paste_from_buffer a1
 
 #: Note that copying to the clipboard is a security risk, as all
