--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1238,7 +1238,7 @@ macos_titlebar_color #0c0c0d
 #: external program or insert it into the terminal or copy it to the
 #: clipboard.
 
-# map kitty_mod+e kitten hints
+map kitty_mod+e kitten hints --program=@
 
 #: Open a currently visible URL using the keyboard. The program used
 #: to open the URL is specified in open_url_with.
