--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -6,7 +6,7 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family      Iosevka Nerd Font Mono
+font_family      Iosevka Nerd Font Mono Regular
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
@@ -23,7 +23,7 @@ bold_italic_font auto
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-font_size 16.0
+font_size 15.0
 
 #: Font size (in pts)
 
@@ -47,8 +47,8 @@ font_size 16.0
 #: support, because it will force kitty to always treat the text as
 #: LTR, which FriBidi expects for terminals.
 
-adjust_line_height  100%
-adjust_column_width 104%
+adjust_line_height  105%
+adjust_column_width 100%
 
 #: Change the size of each character cell kitty renders. You can use
 #: either numbers, which are interpreted as pixels or percentages
