--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -8,7 +8,7 @@
 
 font_family      Iosevka Nerd Font Mono Regular
 bold_font        auto
-italic_font      auto
+italic_font      Iosevka Nerd Font Mono Regular
 bold_italic_font auto
 
 #: You can specify different fonts for the bold/italic/bold-italic
