--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -7,8 +7,9 @@
 #: characters.
 
 font_family      Iosevka Nerd Font Mono Regular
-bold_font        auto
+bold_font        Iosevka Nerd Font Mono Regular
 italic_font      Iosevka Nerd Font Mono Regular
+italic_font      auto
 bold_italic_font auto
 
 #: You can specify different fonts for the bold/italic/bold-italic
