Fix font config in kitty

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -7,10 +7,10 @@
 #: characters.
 
 font_family      Iosevka Nerd Font Mono Regular
-bold_font        Iosevka Nerd Font Mono Regular
-italic_font      Iosevka Nerd Font Mono Regular
-italic_font      auto
-bold_italic_font auto
+# bold_font        Iosevka Nerd Font Mono Regular
+# italic_font      Iosevka Nerd Font Mono Regular
+# italic_font      Iosevka Nerd Font Mono Regular
+# bold_italic_font Iosevka Nerd Font Mono Regular
 
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. To get a full list of supported fonts use the `kitty
@@ -611,7 +611,7 @@ tab_bar_style powerline
 
 # active_tab_foreground   #000
 active_tab_background   #55a
-# active_tab_font_style   bold-italic
+active_tab_font_style   regular
 inactive_tab_foreground #999
 inactive_tab_background #224
 # inactive_tab_font_style normal
