Update kitty config

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1350,3 +1350,8 @@ map kitty_mod+e kitten hints --program=@
 # }}}
 #
 include ./theme.conf
+
+cursor_trail 250
+cursor_trail_decay 0.1 0.4
+
+# macos_hide_titlebar no
