Move some configs to XDG-supported paths

--- a/.gitignore
+++ b/.gitignore
@@ -14,8 +14,6 @@ Public/
 Sites/
 .vim/plugged
 *
-!.ackrc
-!.agignore
 !.bash_profile
 !.bashrc
 !Brewfile
@@ -29,11 +27,8 @@ Sites/
 !.gitmodules
 !.gvimrc
 !.ideavimrc
-!.irbrc
 !.powconfig
 !.profile
-!.pryrc
-!.psqlrc
 !.railsrc
 !.tmux.conf
 !.vim
@@ -49,10 +44,17 @@ Sites/
 !.config/bash/*
 !.ripgreprc
 !.bundle/config
-!.config/jesseduffield/lazygit/config.yml
+!.config/ack/ackrc
+!.config/ag/ignore
 !.config/bat/config
+!.config/ideavim/ideavimrc
+!.config/irc/irbrc
+!.config/jesseduffield/lazygit/config.yml
 !.config/ranger/*
+!.config/ripgrep/config
 !.config/kitty/*
+!.config/pry/*
+!.config/pg/*
 !.config/nvim/init.vim
 !.config/git/*
 !.rgignore
