--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,4 @@ Sites/
 !.rgignore
 !Library/Application Support/Code/User/settings.json
 !Library/Application Support/Code/User/keybindings.json
+.config/zsh/.zcompdump
