Try kitty without title bar

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1354,4 +1354,5 @@ include ./theme.conf
 cursor_trail 250
 cursor_trail_decay 0.1 0.4
 
-# macos_hide_titlebar no
+map cmd+ctrl+drag move_window
+macos_hide_titlebar true
