--- a/.gitignore
+++ b/.gitignore
@@ -60,6 +60,7 @@ Sites/
 !.config/rails/railsrc
 !.config/git/attributes
 !.config/git/config
+!.config/bundle/config
 !.config/razorjack/Brewfile
 !.rgignore
 !Library/Application Support/Code/User/settings.json
