--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -6,7 +6,8 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family      Iosevka Nerd Font Mono Regular
+# font_family      Iosevka Nerd Font Mono Regular
+font_family      Monaspace Neon Var Regular
 # bold_font        Iosevka Nerd Font Mono Regular
 # italic_font      Iosevka Nerd Font Mono Regular
 # italic_font      Iosevka Nerd Font Mono Regular
@@ -48,7 +49,7 @@ font_size 15.0
 #: support, because it will force kitty to always treat the text as
 #: LTR, which FriBidi expects for terminals.
 
-adjust_line_height  105%
+adjust_line_height  120%
 adjust_column_width 100%
 
 #: Change the size of each character cell kitty renders. You can use
