--- a/.config/razorjack/Brewfile
+++ b/.config/razorjack/Brewfile
@@ -1,9 +1,11 @@
 tap "cjbassi/ytop"
 tap "clementtsang/bottom"
-tap "cloudflare/cloudflare"
+tap "heroku/brew"
 tap "homebrew/bundle"
+tap "homebrew/cask"
 tap "homebrew/cask-fonts"
 tap "homebrew/cask-versions"
+tap "homebrew/core"
 tap "homebrew/services"
 tap "mongodb/brew"
 tap "neovim/neovim"
@@ -13,15 +15,15 @@ brew "ack"
 brew "xz"
 brew "zstd"
 brew "little-cms2"
+brew "webp"
 brew "jpeg-xl"
 brew "aom"
 brew "atuin"
 brew "autoconf"
+brew "bash"
 brew "autoenv"
-brew "ca-certificates"
 brew "readline"
 brew "awscli"
-brew "bash"
 brew "libssh2"
 brew "libgit2"
 brew "oniguruma"
@@ -31,36 +33,30 @@ brew "gettext"
 brew "glib"
 brew "gdk-pixbuf"
 brew "harfbuzz"
-brew "libavif"
-brew "pango"
-brew "librsvg"
 brew "chafa"
-brew "circleci"
-brew "cloc"
-brew "cloudflared"
 brew "cmake"
 brew "cscope"
 brew "direnv"
-brew "dnscrypt-proxy"
+brew "dnscrypt-proxy", restart_service: :changed
 brew "dog"
 brew "duf"
 brew "dust"
 brew "libtool"
 brew "wxwidgets"
+brew "erlang"
 brew "eza"
 brew "fd"
 brew "libogg"
+brew "flac"
 brew "gmp"
 brew "libevent"
-brew "libidn2"
 brew "unbound"
-brew "gnutls"
 brew "lame"
-brew "leptonica"
-brew "libass"
 brew "libvorbis"
+brew "libsndfile"
 brew "libsodium"
 brew "sdl2"
+brew "snappy"
 brew "tesseract"
 brew "theora"
 brew "xvid"
@@ -68,76 +64,77 @@ brew "ffmpeg"
 brew "figlet"
 brew "fish"
 brew "fzf"
-brew "gd"
 brew "gdbm"
 brew "gh"
+brew "ghostscript"
 brew "gifsicle"
 brew "git"
 brew "git-delta"
-brew "gnu-sed"
+brew "glow"
 brew "gnu-tar"
 brew "libgpg-error"
-brew "gnupg"
 brew "go"
 brew "goreman"
 brew "gping"
-brew "netpbm"
-brew "gts"
-brew "graphviz"
-brew "guile"
-brew "hdf5"
-brew "heroku"
+brew "howdoi"
+brew "html2text"
 brew "httpie"
 brew "hub"
 brew "libheif"
 brew "imagemagick"
 brew "jemalloc"
 brew "jq"
-brew "krb5"
 brew "lazygit"
+brew "leveldb"
 brew "libffi"
 brew "unibilium"
 brew "libtermkey"
-brew "libuv"
 brew "libvterm"
 brew "libxml2"
 brew "libyaml"
+brew "llm"
+brew "logrotate"
+brew "lsd"
 brew "luajit"
 brew "luajit-openresty"
 brew "luv"
 brew "mas"
-brew "memcached", restart_service: :changed
+brew "mdcat"
+brew "memcached"
 brew "mise"
+brew "mongosh"
+brew "yt-dlp"
+brew "mpv"
 brew "msgpack"
 brew "neofetch"
 brew "tree-sitter"
 brew "neovim"
 brew "nmap"
-brew "node@18"
 brew "node@20"
 brew "node@22"
 brew "openjdk@11"
-brew "openssl@1.1"
+brew "pandoc"
 brew "pcre"
+brew "pdftk-java"
 brew "pidof"
 brew "pinentry-mac"
+brew "pipx"
 brew "poppler"
 brew "postgresql@16", restart_service: :changed
 brew "powerlevel10k"
 brew "procs"
-brew "psutils"
 brew "python@3.10"
-brew "python@3.11"
 brew "qt"
 brew "rabbitmq", restart_service: :changed
 brew "ranger"
-brew "ruby-build"
-brew "rbenv"
 brew "reattach-to-user-namespace"
 brew "redis", restart_service: :changed
 brew "ripgrep"
+brew "ripgrep-all"
 brew "rsync"
+brew "ruby-build"
 brew "rust"
+brew "rustup"
 brew "s3cmd"
 brew "shellcheck"
 brew "smartmontools"
@@ -149,31 +146,34 @@ brew "tig"
 brew "tmux"
 brew "transmission-cli"
 brew "tree"
-brew "truncate"
 brew "universal-ctags"
-brew "vips"
 brew "w3m"
 brew "watch"
 brew "wget"
 brew "yamllint"
 brew "youtube-dl"
-brew "yt-dlp"
 brew "z"
 brew "zsh"
 brew "zsh-completions"
 brew "zsh-syntax-highlighting"
 brew "cjbassi/ytop/ytop"
+brew "heroku/brew/heroku"
+brew "mongodb/brew/mongodb-community-shell"
+brew "mongodb/brew/mongodb-community@7.0"
 brew "puma/puma/puma-dev"
 cask "1password"
 cask "alacritty"
-cask "alfred"
+cask "alfred@4"
 cask "backblaze"
+cask "balenaetcher"
 cask "bartender"
 cask "brave-browser"
+cask "brave-browser@beta"
+cask "discord"
 cask "dropbox"
-cask "elgato-control-center"
 cask "firefox"
 cask "firefox@developer-edition"
+cask "focus"
 cask "font-iosevka-nerd-font"
 cask "font-lato"
 cask "font-monaspace"
@@ -181,9 +181,10 @@ cask "github"
 cask "google-chrome"
 cask "google-chrome@canary"
 cask "gpg-suite"
+cask "guitar-pro"
 cask "handbrake"
-cask "harvest"
 cask "iina"
+cask "imagealpha"
 cask "imageoptim"
 cask "iterm2"
 cask "jetbrains-toolbox"
@@ -192,34 +193,43 @@ cask "kitty"
 cask "lastfm"
 cask "linearmouse"
 cask "logi-options+"
-cask "loom"
+cask "logitune"
+cask "michaelvillar-timer"
+cask "monitorcontrol"
+cask "obsidian"
 cask "pym-player"
 cask "qlmarkdown"
 cask "quicklook-csv"
 cask "quicklook-json"
+cask "rectangle"
 cask "sketch"
-cask "skype"
 cask "soundsource"
 cask "spotify"
 cask "steam"
-cask "stolendata-mpv"
 cask "subler"
+cask "thunderbird"
 cask "transmission"
 cask "transmit"
 cask "visual-studio-code"
 cask "wkhtmltopdf"
 cask "xld"
 cask "zoom"
+mas "1Blocker", id: 1365531024
 mas "Bear", id: 1091189122
-mas "Cascadea", id: 1432182561
+mas "ColorSnapper2", id: 969418666
 mas "Disk Diag", id: 672206759
-mas "GarageBand", id: 682658836
-mas "iMovie", id: 408981434
-mas "LittleSnapper", id: 403489261
-mas "Logic Pro", id: 634148309
-mas "MainStage", id: 634159523
-mas "Meeter", id: 1510445899
-mas "OmniFocus", id: 1346203938
-mas "OmniGraffle", id: 1142578753
-mas "Trello", id: 1278508951
-mas "Tweetbot", id: 1384080005
+mas "Harvest", id: 506189836
+mas "Keynote", id: 409183694
+mas "Messenger", id: 1480068668
+mas "NLE Player", id: 1420648744
+mas "Numbers", id: 409203825
+mas "Pages", id: 409201541
+mas "Pixelmator", id: 407963104
+mas "Pixelmator Pro", id: 1289583905
+mas "Pocket", id: 568494494
+mas "Slack", id: 803453959
+mas "Soulver 2", id: 413965349
+mas "Tapes", id: 779457527
+mas "The Unarchiver", id: 425424353
+mas "WhatsApp", id: 310633997
+mas "xScope", id: 889428659
